[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
aws-config = "0.3"
aws-sdk-gamelift = "0.3"
aws-gamelift-server-sdk-rs = { git = "https://github.com/ZaMaZaN4iK/aws-gamelift-server-sdk-rs" }
console-subscriber = "0.1"
derive_more = "0.99"
tokio = { version = "1.15", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
