[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
aws-config = "0.3"
aws-sdk-gamelift = "0.3"
aws-gamelift-server-sdk-rs = "0.3"
chrono = "0.4"
console-subscriber = "0.1"
derive_more = "0.99"
futures-util = "0.3"
tokio = { version = "1.15", features = ["full", "tracing"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
